# Embedded-C-Architecture-Course

./: .gitignore  README.md  book.toml  embedded-course-architect.skill  mermaid-init.js
.gemini/skills/embedded-course-architect/: SKILL.md
.github/workflows/: c-build.yml  mdbook.yml
code/infrastructure/: .clang-format  .clang-tidy  CMakeLists.txt  linker_script.ld  toolchain-arm-gcc.cmake
code/part1-foundations/layer_example/: app_layer.c  app_layer.h  driver_layer.c  driver_layer.h  main.c  service_layer.c  service_layer.h
code/part2-modular-design/hal_example/: hal_adc.c  hal_adc.h  hal_dma.c  hal_dma.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_pwm.c  hal_pwm.h  hal_rtc.c  hal_rtc.h  hal_spi.c  hal_spi.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h  hal_wdt.c  hal_wdt.h
code/part2-modular-design/module_pattern/: module_template.c  module_template.h
code/part3-execution-models/isr_patterns/: isr_safe.c  isr_safe.h  uart_isr_example.c
code/part3-execution-models/rtos_patterns/: rtos_task_template.c  rtos_task_template.h  safe_queue.c  safe_queue.h
code/part3-execution-models/state_machines/: hsm_template.c  hsm_template.h
code/part3-execution-models/superloop/: main.c  superloop.c  superloop.h
code/part4-code-quality/assertions/: app_assert.c  app_assert.h
code/part4-code-quality/coding_standard/: example_good.c
code/part4-code-quality/diagnostics/: diagnostics.c  diagnostics.h
code/part4-code-quality/error_handling/: error_codes.h  error_handler.c
code/part5-testability/mocking/: mock_hal.c  mock_hal.h
code/part6-standardization/legacy_migration/: legacy_adapter.c  legacy_adapter.h
code/part7-workshops/driver_stack/: bsp_config.c  bsp_config.h  driver_interface.c  driver_interface.h  hal_layer.c  hal_layer.h
code/part7-workshops/rtos_device/: main.c  task_controller.c  task_controller.h  task_network.c  task_network.h  task_sensor.c  task_sensor.h
code/part7-workshops/sensor_node/: main.c  power_manager.c  power_manager.h  sensor_driver.c  sensor_driver.h
embedded-course-architect/scripts/: audit_course.py  scaffold_module.py
hardware/stm32/nucleo-f401re/: CMakeLists.txt  README.md
hardware/stm32/nucleo-f401re/bsp/: bsp.c  bsp.h  stm32f401xe.h
hardware/stm32/nucleo-f401re/examples/01_blink/: main.c
hardware/stm32/nucleo-f401re/examples/02_uart_printf/: main.c
hardware/stm32/nucleo-f401re/examples/03_i2c_sensor/: main.c
hardware/stm32/nucleo-f401re/examples/04_timer_interrupt/: main.c
hardware/stm32/nucleo-f401re/hal/: hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h
hardware/stm32/nucleo-f401re/linker/: stm32f401xe.ld
hardware/stm32/nucleo-f401re/startup/: startup_stm32f401xe.c
src/: SUMMARY.md  introduction.md
src/appendix/: how-to-use-with-llm.md  index.md  recommended-starting-point.md  suggested-teaching-order.md
src/part1-foundations/chapter-01/: 01-what-architecture-means.md  02-architecture-vs-implementation.md  03-why-codebase-structure-matters.md  04-standardization-as-multiplier.md  index.md
src/part1-foundations/chapter-02/: 01-typical-firmware-layers.md  02-responsibilities-of-each-layer.md  03-control-flow.md  04-data-flow.md  index.md
src/part2-modular-design/chapter-03/: 01-what-is-a-module.md  02-cohesion-and-coupling.md  03-public-api-vs-private-implementation.md  04-defining-module-contracts.md  index.md
src/part2-modular-design/chapter-04/: 01-why-abstractions-matter.md  02-hardware-abstraction-layers.md  03-board-support-packages.md  04-interface-design-patterns.md  05-stable-interfaces.md  index.md
src/part2-modular-design/chapter-05/: 01-dependency-direction.md  02-avoiding-cyclic-dependencies.md  03-compile-time-vs-link-time.md  04-configuration-without-chaos.md  index.md
src/part3-execution-models/chapter-06/: 01-superloop-model.md  02-cooperative-scheduling.md  03-time-management.md  04-superloop-failure-modes.md  index.md
src/part3-execution-models/chapter-07/: 01-what-belongs-in-isr.md  02-isr-handoff-patterns.md  03-shared-data.md  04-standardizing-interrupts.md  index.md
src/part3-execution-models/chapter-08/: 01-when-rtos-is-appropriate.md  02-task-ownership.md  03-synchronization-primitives.md  04-concurrency-hazards.md  05-standardizing-task-design.md  index.md
src/part3-execution-models/chapter-09/: 01-event-driven-structure.md  02-finite-state-machines.md  03-hierarchical-state-machines.md  04-translating-behavior-into-code.md  index.md
src/part4-code-quality/chapter-10/: 01-why-coding-standards-exist.md  02-style-correctness-safety.md  03-misra-barr-c-project-rules.md  04-enforceable-rules.md  index.md
src/part4-code-quality/chapter-11/: 01-header-file-responsibilities.md  02-include-discipline.md  03-macros-inline-constants.md  04-namespacing-conventions.md  index.md
src/part4-code-quality/chapter-12/: 01-error-categories.md  02-return-codes-assertions.md  03-fail-safe-vs-fail-fast.md  04-observability-diagnostics.md  index.md
src/part4-code-quality/chapter-13/: 01-what-makes-code-reviewable.md  02-review-checklists.md  03-architectural-smells.md  index.md
src/part5-testability/chapter-14/: 01-why-hard-to-test.md  02-test-seams.md  03-host-vs-target-testing.md  04-standardizing-test-expectations.md  index.md
src/part5-testability/chapter-15/: 01-role-of-static-analysis.md  02-mapping-standards-to-tools.md  03-warning-policies.md  04-measuring-codebase-health.md  index.md
src/part6-standardization/chapter-16/: 01-what-framework-should-control.md  02-what-should-remain-flexible.md  03-organizational-constraints.md  index.md
src/part6-standardization/chapter-17/: 01-codebase-layout-standard.md  02-module-template-standard.md  03-interface-dependency-rules.md  04-concurrency-isr-rules.md  05-review-acceptance-criteria.md  index.md
src/part6-standardization/chapter-18/: 01-adoption-strategy.md  02-legacy-migration.md  03-governance-exceptions.md  04-keeping-framework-alive.md  index.md
src/part7-workshops/chapter-19/: 01-bare-metal-sensor-node.md  index.md  (+3 more)
tools/: README.md  course_audit.py
(+27 files in other folders)
